# ChoreonoidCORBAPluginBuildFiles

./: CMakeLists.txt  README.md
scripts/ubuntu_2204/: Dockerfile.package
scripts/ubuntu_2404/: Dockerfile.package
src/: CMakeLists.txt
